Fix: Horizontal scrolling by reducing screenshot scale

--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ p, li {
 }
 .app-screenshot {
   margin: -1rem auto 0;
-  transform: scale(1.2);
+  transform: scale(1.177);
 }
 /* Wider screenshots need some extra top margin */
 .app-screenshot.wide {
